--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,10 @@
     </build>
 
     <repositories>
-        <!--        <repository>
+                <repository>
                     <id>dmulloy2-repo</id>
                     <url>http://repo.dmulloy2.net/nexus/repository/public/</url>
-                </repository>-->
+                </repository>
         <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
@@ -32,12 +32,12 @@
     </repositories>
 
     <dependencies>
-        <!--        <dependency>
+              <dependency>
                     <groupId>com.comphenix.protocol</groupId>
                     <artifactId>ProtocolLib-API</artifactId>
                     <version>4.3.0</version>
                     <scope>provided</scope>
-                </dependency>-->
+                </dependency>
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
